--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,9 +1,9 @@
-name: Confluence Publisher
+name: Confluence Publisher                #penamaan untuk judul pada github action. bisa diisi apasaja
 
 on:
   push:
      tags: 
-       - 'v*-bpa'                         #triger untuk menjalankan github action
+       - 'v*-bpa'                         #triger untuk menjalankan github action. ini menggunakan tag pada release. "-bpa" dapat difanti apasaja.
 jobs:
     build:
   
