--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,9 +1,9 @@
-name: Confluence Publisher                #penamaan untuk judul pada github action. bisa diisi apasaja
+name: Confluence Publisher                
 
 on:
   push:
      tags: 
-       - 'v*-bpa'                         #triger untuk menjalankan github action. ini menggunakan tag pada release. "-bpa" dapat difanti apasaja.
+       - 'v*-bpa'                          
 jobs:
     build:
   
@@ -17,7 +17,7 @@ jobs:
           java-version: 1.8               #paten
       - name: Build with Maven
         env:
-          username: ${{ secrets.ID}}
-          password: ${{ secrets.TOKEN}}
+          username: ${{ secrets.ID_AYUMEL}}
+          password: ${{ secrets.PASS_AYUMEL}}
         run: mvn org.sahli.asciidoc.confluence.publisher:asciidoc-confluence-publisher-maven-plugin:publish --file pom.xml -Dusername=$username -Dpassword=$password
         # "--file pom.xml" tergantung tempat peletakan contoh di dalam dokumen "--file nama-document/pom.xml". dan juga penamaan pom dapat ditambahi untuk dokumen yang ingin di publish dalam confluence.
